Add pool router and controller with its implementations
